syntax = "proto3";

package uber.yarpc.encoding.protobuf.protocgenyarpcgo.internal.testing;

import "encoding/protobuf/protoc-gen-yarpc-go/internal/testing/dep.proto";
import "yarpcproto/yarpc.proto";

option go_package = "testing";

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  string value = 2;
}

message SetValueRequest {
  string key = 1;
  string value = 2;
}

// SetValueResponse in dep.proto

message FireRequest {
  string value = 1;
}

message HelloRequest {
  string id = 1;
}

message HelloResponse {
  string id = 1;
}

service KeyValue {
  rpc GetValue(GetValueRequest) returns (GetValueResponse) {}
  rpc SetValue(SetValueRequest) returns (SetValueResponse) {}
}

service Sink {
  rpc Fire(FireRequest) returns (uber.yarpc.Oneway) {}
}

service All {
  rpc GetValue(GetValueRequest) returns (GetValueResponse) {}
  rpc SetValue(SetValueRequest) returns (SetValueResponse) {}
  rpc Fire(FireRequest) returns (uber.yarpc.Oneway) {}
  rpc HelloOne(stream HelloRequest) returns (HelloResponse) {}
  rpc HelloTwo(HelloRequest) returns (stream HelloResponse) {}
  rpc HelloThree(stream HelloRequest) returns (stream HelloResponse) {}
}
